Make frontend API endpoint configurable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
   </head>
-  <body>
+  <body data-api-base="http://localhost:8000">
     <header>
       <h1>ReBuild Intelligence</h1>
       <p>Upload demolition intel and get adaptive reuse recommendations in minutes.</p>
