Add frontend version display and test filler

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
   </head>
   <body data-api-base="http://localhost:8000">
-  <body>
     <header>
-      <h1>ReBuild Intelligence</h1>
-      <p>Upload demolition intel and get adaptive reuse recommendations in minutes.</p>
+      <div class="title-row">
+        <div>
+          <h1>ReBuild Intelligence</h1>
+          <p>Upload demolition intel and get adaptive reuse recommendations in minutes.</p>
+        </div>
+        <div class="version-tag">Build <span id="app-version">—</span></div>
+      </div>
     </header>
 
     <main>
@@ -70,7 +74,10 @@
             <input type="file" name="scan_files" multiple />
           </div>
 
-          <button type="submit">Run algorithm</button>
+          <div class="button-row">
+            <button type="submit">Run algorithm</button>
+            <button type="button" id="load-test-data">Load test data</button>
+          </div>
         </form>
       </section>
 
