Add OBJ export endpoint and download button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,6 +76,7 @@
           <div class="button-row">
             <button type="submit">Run algorithm</button>
             <button type="button" id="load-test-data">Load test data</button>
+            <button type="button" id="export-obj">Download 3D OBJ</button>
           </div>
         </form>
       </section>
